--- a/index.html
+++ b/index.html
@@ -1,24 +1,40 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="css/mystyle.css" media="all" />
         <title>Surbhi gupta</title>
     </head>
     <body>
-        <div class="header">
-            <div class=:Logo">
-                <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.thesprucepets.com%2Fthmb%2FwpN_ZunUaRQAc_WRdAQRxeTbyoc%3D%2F4231x2820%2Ffilters%3Afill(auto%2C1)%2Fadorable-white-pomeranian-puppy-spitz-921029690-5c8be25d46e0fb000172effe.jpg&imgrefurl=https%3A%2F%2Fwww.thesprucepets.com%2Fcute-teacup-dog-breeds-4587847&tbnid=69D5kcmpBnbcnM&vet=12ahUKEwic0JPjn8LwAhVFo0sFHcmRDMkQMygAegUIARDPAQ..i&docid=r8CEVxOSUXlofM&w=4231&h=2820&q=dog%20images&ved=2ahUKEwic0JPjn8LwAhVFo0sFHcmRDMkQMygAegUIARDPAQ">
+        <div class="topbar">
+            <div class="Logo">
+                <img src="image/new.png ">
             </div>
-                <ul>
-                    <li>Home</li> 
-                    <li>Projects</li>
-                    <li>Contact</li>
-                </ul>
-                <div class="title">
-                    <hi>Surbhi gupta</hi>
+            <ul>
+                <li class="active"><a href="#"> Home </a></li>
+                <li><a href="project.html"> Projects </a></li>
+                <li><a href="contact.html"> Contact </a></li>
+            </ul>
+                <div class="name">
+                    <h1>Surbhi Gupta</h1>
                 </div>
         </div>
-        <div class="metadata">
-            <p>lines about me</p>
+        <div class="mainbody">
+            <p>I am a passionate and quick learner and always strives to learn new things. I recently started learning java and really enjoying coding.
+                I want to pursue this further and start my career as a software developer.
+                My hobbies include photography and travelling. I love to explore new places and learn different cultures.
+                </p>
+        </div>
+        <div class="bottombar">
+            <div class="contact">
+                <p>E-mail_id:shurbhikr01@gmail.com</p>
+            </div>
+            <div class="social">
+                <p><a href="https://www.linkedin.com/in/surbhi-742831130/" >Linkedin</a></p>
+                <p><a href=" https://github.com/surbhikr01/portfolio" >Github</a></p>
+            </div>
         </div>
     </body>
 </html>
+
+
+
