--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
         </div>
         <div class="mainbody">
-            <p>I am a passionate and quick learner and always strives to learn new things. I recently started learning java and really enjoying coding.
+            <p>I am a passionate and quick learner and always strive to learn new things. I recently started learning java and really enjoying coding.
                 I want to pursue this further and start my career as a software developer.
                 My hobbies include photography and travelling. I love to explore new places and learn different cultures.
                 </p>
