--- a/project.html
+++ b/project.html
@@ -20,11 +20,11 @@
         <div class="project_list container">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <label>1. COOKING AUTOMATION</label>
+                    <h1>1. COOKING AUTOMATION</h1>
                 </div>
                 <div class="panel-body">
                     <div>
-                        <p>
+                        <p style="font-weight: bold">
                             Nov 2015 – Feb 2016 <br>
                             Role - Engineering Project as Trainee.
                         </p>
@@ -49,12 +49,14 @@
 
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <label>2. WEB DEVELOPMENT</label>
+                    <h1>2. WEB DEVELOPMENT</h1>
                 </div>
                 <div class="panel-body">
                     <div>
-                        <p>
-                            April 2021-May 2021 <br>
+                        <p style="font-weight: bold">
+                    
+                            
+                            April 2021-May 2021<br>
                             Project description Role -  Developer
                         </p>
                         <ol>
