--- a/contact.html
+++ b/contact.html
@@ -22,11 +22,11 @@
                 <h1>CONTACT FORM</h1>
                 <p>Required fields are followed by <strong><abbr title="required">*</abbr></strong>.</p>
                 <section>
-                    <p>
-                        <label for="name">
-                            <span>Name: </span>
-                            <strong><abbr title="required">*</abbr></strong>
-                        </label>
+                    <p> <label for="name">
+                        <span>Name: </span>
+                        <strong><abbr title="required">*</abbr></strong>
+                    </label>
+
                         <input type="text" id="name" name="username"></input>
                     </p>
                     <p>
@@ -34,6 +34,7 @@
                             <span>Email-id: </span>
                             <strong><abbr title="required">*</abbr></strong>
                         </label>
+
                         <input type="email" id="email" name="email">
                     </p>
                     <p>
