--- a/index.html
+++ b/index.html
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="css/mystyle.css" media="all" />
-        <title>Surbhi gupta</title>
-    </head>
-    <body>
-        <div class="topbar">
-            <div class="Logo">
-                <img src="image/new.png ">
-            </div>
-            <ul>
-                <li class="active"><a href="#"> Home </a></li>
-                <li><a href="project.html"> Projects </a></li>
-                <li><a href="contact.html"> Contact </a></li>
-            </ul>
-                <div class="name">
-                    <h1>Surbhi Gupta</h1>
-                </div>
+
+<head>
+    <link rel="stylesheet" type="text/css" href="css/mystyle.css" media="all" />
+    <title>Surbhi gupta</title>
+</head>
+
+<body>
+    <div class="topbar">
+        <div class="Logo">
+            <img src="image/new.png ">
         </div>
-        <div class="mainbody">
-            <p>I am a passionate and quick learner and always strive to learn new things. I recently started learning java and really enjoying coding.
-                I want to pursue this further and start my career as a software developer.
-                My hobbies include photography and travelling. I love to explore new places and learn different cultures.
-                </p>
+        <ul>
+            <li class="active"><a href="#"> Home </a></li>
+            <li><a href="project.html"> Projects </a></li>
+            <li><a href="contact.html"> Contact </a></li>
+        </ul>
+        <div class="name">
+            <h1>Surbhi Gupta</h1>
         </div>
-        <div class="bottombar">
-            <div class="contact">
-                <p>E-mail_id:shurbhikr01@gmail.com</p>
-            </div>
-            <div class="social">
-                <p><a href="https://www.linkedin.com/in/surbhi-742831130/" >Linkedin</a></p>
-                <p><a href=" https://github.com/surbhikr01/portfolio" >Github</a></p>
-            </div>
+    </div>
+    <div class="mainbody">
+        <p>I am a passionate and quick learner and always strive to learn new things. I recently started learning java
+            and really enjoying coding.
+            I want to pursue this further and start my career as a software developer.
+            My hobbies include photography and travelling. I love to explore new places and learn different cultures.
+        </p>
+    </div>
+    <div class="bottombar">
+        <div class="contact">
+            <p>E-mail_id:shurbhikr01@gmail.com</p>
         </div>
-    </body>
+        <div class="social">
+            <p><a href="https://www.linkedin.com/in/surbhi-742831130/">Linkedin</a></p>
+            <p><a href=" https://github.com/surbhikr01/portfolio">Github</a></p>
+        </div>
+    </div>
+</body>
+
 </html>
-
-
-
